[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A comprehensive, cross-platform Python template project."
authors = ["Your Name <your.email@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^0.24"
pytest = "^6.2"
coverage = "^5.5"
sphinx = "^4.1"
mkdocs = "^1.1"
black = "^21.6"
isort = "^5.9"
mypy = "^0.910"
pylint = "^2.9"
bandit = "^1.7"
pyre-check = "^0.9"

[tool.poetry.dev-dependencies]
pytest-mock = "*"
django-stubs = "*"
typing-extensions = "*"
python-dotenv = "*"
djangorestframework = "*"
djangorestframework-simplejwt = "*"
djangorestframework-camel-case = "*"
django-cors-headers = "*"
django-auth-ldap = "*"
django-oauth-toolkit = "*"
gunicorn = "*"
whitenoise = "*"
psycopg2-binary = "*"
aiohttp = ">=3.9.0"
pre-commit = "^2.13"

[tool.poetry.scripts]
creodamo = "run:main"

[tool.pre-commit]
hooks = [
    {
        id = "black",
        stages = ["commit"]
    },
    {
        id = "isort",
        stages = ["commit"]
    }
]
