[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "My project description."
authors = ["Jacque Antoine DeGraff<jacquedegraff@creodamo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
creolang = "^1.0.0"
