[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "My project description."
authors = ["Jacque Antoine DeGraff <jacquedegraff@creodamo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
creolang = "^1.0.0"
neo4j = "^4.3.0"  # For Neo4j graph database interaction
matplotlib = "^3.4.2"  # For data visualization
pandas = "^1.3.0"  # For data manipulation
numpy = "^1.21.0"  # For numerical computing
aiohttp = "^3.7.4"  # For asynchronous HTTP requests
docker = "^5.0.0"  # For interacting with Docker
networkx = "^2.5"  # For network graph creation and manipulation
# Add any other specific dependencies required by CreoDependenciesGenerator here

# [tool.poetry.dev-dependencies]
# Include development-specific dependencies here if any
